add max position

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -21,6 +21,8 @@ Test1DParamFuncs.TestMaxVal1D_norm_cax.Checked=1
 Test1DParamFuncs.TestMaxVal1D_norm_cax.Expanded=0
 Test1DParamFuncs.TestMaxVal1D_norm_max.Checked=1
 Test1DParamFuncs.TestMaxVal1D_norm_max.Expanded=0
+Test1DParamFuncs.TestMaxPos1D.Checked=1
+Test1DParamFuncs.TestMaxPos1D.Expanded=0
 Test1DParamFuncs.TestMinVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestMinVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestMinVal1D_norm_cax.Checked=1
