--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -14,14 +14,14 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="118"/>
+      <BuildNr Value="119"/>
       <Attributes pvaPreRelease="True"/>
       <StringTable CompanyName="Yenzakahle Medical Physics Inc"/>
     </VersionInfo>
     <MacroValues Count="1">
       <Macro1 Name="LCLWidgetType" Value="qt5"/>
     </MacroValues>
-    <BuildModes Count="3" Active="Debug">
+    <BuildModes Count="3" Active="Release">
       <Item1 Name="default" Default="True"/>
       <Item2 Name="Debug">
         <CompilerOptions>
@@ -160,8 +160,9 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="1373"/>
-        <CursorPos X="60" Y="1385"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="1025"/>
+        <CursorPos X="24" Y="1044"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -910,7 +911,6 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <TopLine Value="181"/>
         <CursorPos X="32" Y="756"/>
@@ -1028,7 +1028,7 @@
         <EditorIndex Value="8"/>
         <TopLine Value="29"/>
         <CursorPos X="28" Y="190"/>
-        <UsageCount Value="42"/>
+        <UsageCount Value="43"/>
         <Loaded Value="True"/>
       </Unit112>
       <Unit113>
@@ -1036,7 +1036,7 @@
         <EditorIndex Value="9"/>
         <TopLine Value="480"/>
         <CursorPos Y="510"/>
-        <UsageCount Value="40"/>
+        <UsageCount Value="41"/>
         <Loaded Value="True"/>
       </Unit113>
       <Unit114>
@@ -1068,123 +1068,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="110" Column="56" TopLine="80"/>
+        <Caret Line="403" Column="29" TopLine="373"/>
       </Position1>
       <Position2>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="118" Column="29" TopLine="88"/>
+        <Caret Line="404" Column="29" TopLine="374"/>
       </Position2>
       <Position3>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="156" Column="31" TopLine="126"/>
+        <Caret Line="405" Column="30" TopLine="375"/>
       </Position3>
       <Position4>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="165" Column="36" TopLine="135"/>
+        <Caret Line="410" Column="36" TopLine="380"/>
       </Position4>
       <Position5>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="170" Column="71" TopLine="140"/>
+        <Caret Line="412" Column="31" TopLine="382"/>
       </Position5>
       <Position6>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="318" Column="44" TopLine="289"/>
+        <Caret Line="588" Column="29" TopLine="559"/>
       </Position6>
       <Position7>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="319" Column="31" TopLine="290"/>
+        <Caret Line="748" Column="17" TopLine="719"/>
       </Position7>
       <Position8>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="400" Column="49" TopLine="370"/>
+        <Caret Line="768" Column="43" TopLine="737"/>
       </Position8>
       <Position9>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="402" Column="13" TopLine="372"/>
+        <Caret Line="834" Column="10" TopLine="808"/>
       </Position9>
       <Position10>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="403" Column="29" TopLine="373"/>
+        <Caret Line="894" Column="16" TopLine="866"/>
       </Position10>
       <Position11>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="404" Column="29" TopLine="374"/>
+        <Caret Line="896" Column="11" TopLine="866"/>
       </Position11>
       <Position12>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="405" Column="30" TopLine="375"/>
+        <Caret Line="1010" Column="51" TopLine="981"/>
       </Position12>
       <Position13>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="410" Column="36" TopLine="380"/>
+        <Caret Line="1103" Column="16" TopLine="1073"/>
       </Position13>
       <Position14>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="412" Column="31" TopLine="382"/>
+        <Caret Line="1166" Column="16" TopLine="1136"/>
       </Position14>
       <Position15>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="588" Column="29" TopLine="559"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="8" Column="49"/>
       </Position15>
       <Position16>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="748" Column="17" TopLine="719"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="51" Column="32" TopLine="21"/>
       </Position16>
       <Position17>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="768" Column="43" TopLine="737"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="49" Column="21" TopLine="35"/>
       </Position17>
       <Position18>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="834" Column="10" TopLine="808"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="6" Column="38"/>
       </Position18>
       <Position19>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="894" Column="16" TopLine="866"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="545" Column="49" TopLine="516"/>
       </Position19>
       <Position20>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="896" Column="11" TopLine="866"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="546" Column="49" TopLine="519"/>
       </Position20>
       <Position21>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1010" Column="51" TopLine="981"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="548" Column="45" TopLine="519"/>
       </Position21>
       <Position22>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1103" Column="16" TopLine="1073"/>
+        <Caret Line="1385" Column="60" TopLine="1373"/>
       </Position22>
       <Position23>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1166" Column="16" TopLine="1136"/>
+        <Caret Line="1092" TopLine="1069"/>
       </Position23>
       <Position24>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="8" Column="49"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="607" TopLine="606"/>
       </Position24>
       <Position25>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="51" Column="32" TopLine="21"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="687" TopLine="666"/>
       </Position25>
       <Position26>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="49" Column="21" TopLine="35"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="609" TopLine="588"/>
       </Position26>
       <Position27>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="6" Column="38"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="689" TopLine="666"/>
       </Position27>
       <Position28>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="545" Column="49" TopLine="516"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="608" Column="50" TopLine="590"/>
       </Position28>
       <Position29>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="546" Column="49" TopLine="519"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="688" Column="44" TopLine="670"/>
       </Position29>
       <Position30>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="548" Column="45" TopLine="519"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1095" Column="48" TopLine="1077"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
