--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=1
+Test1DParamFuncs.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -286,7 +286,7 @@ Test2DParamFuncs.TestXSize2D.Expanded=0
 Test2DParamFuncs.TestYSize2D.Checked=1
 Test2DParamFuncs.TestYSize2D.Expanded=0
 TestProtocolSNC.Checked=1
-TestProtocolSNC.Expanded=1
+TestProtocolSNC.Expanded=0
 TestProtocolSNC.TestProtocolAll.Checked=1
 TestProtocolSNC.TestProtocolAll.Expanded=0
 TestProtocolSNC.TestProtocolVarian.Checked=1
@@ -303,8 +303,10 @@ TestProtocolPTW.TestProtocolAFSSAPS.Checked=1
 TestProtocolPTW.TestProtocolAFSSAPS.Expanded=0
 TestProtocolPTW.TestProtocolIEC.Checked=1
 TestProtocolPTW.TestProtocolIEC.Expanded=0
+TestProtocolPTW.TestProtocolWFF.Checked=1
+TestProtocolPTW.TestProtocolWFF.Expanded=0
 TestProtocolIBA.Checked=1
-TestProtocolIBA.Expanded=1
+TestProtocolIBA.Expanded=0
 TestProtocolIBA.TestProtocolVarian.Checked=1
 TestProtocolIBA.TestProtocolVarian.Expanded=0
 TestProtocolIBA.TestProtocolSiemens.Checked=1
@@ -317,6 +319,10 @@ TestProtocolIBA.TestProtocolIEC.Checked=1
 TestProtocolIBA.TestProtocolIEC.Expanded=0
 TestProtocolIBA.TestProtocolDIN.Checked=1
 TestProtocolIBA.TestProtocolDIN.Expanded=0
+TestProtocolIBA.TestProtocolWFF.Checked=1
+TestProtocolIBA.TestProtocolWFF.Expanded=0
+TestProtocolIBA.TestProtocolFFF.Checked=1
+TestProtocolIBA.TestProtocolFFF.Expanded=0
 TestProtocolPylinac.Checked=1
 TestProtocolPylinac.Expanded=0
 TestProtocolPylinac.TestProtocolVarian.Checked=1
@@ -325,7 +331,19 @@ TestProtocolPylinac.TestProtocolSiemens.Checked=1
 TestProtocolPylinac.TestProtocolSiemens.Expanded=0
 TestProtocolPylinac.TestProtocolElekta.Checked=1
 TestProtocolPylinac.TestProtocolElekta.Expanded=0
+TestProtocolPylinac.TestProtocolWFF.Checked=1
+TestProtocolPylinac.TestProtocolWFF.Expanded=0
+TestProtocolPylinac.TestProtocolFFF.Checked=1
+TestProtocolPylinac.TestProtocolFFF.Expanded=0
+TestProtocolBistroMath.Checked=1
+TestProtocolBistroMath.Expanded=1
+TestProtocolBistroMath.TestProtocolElekta.Checked=1
+TestProtocolBistroMath.TestProtocolElekta.Expanded=0
+TestProtocolBistroMath.TestProtocolWFF.Checked=1
+TestProtocolBistroMath.TestProtocolWFF.Expanded=0
+TestProtocolBistroMath.TestProtocolFFF.Checked=1
+TestProtocolBistroMath.TestProtocolFFF.Expanded=0
 TestProtocolImageJ.Checked=1
-TestProtocolImageJ.Expanded=1
+TestProtocolImageJ.Expanded=0
 TestProtocolImageJ.TestProtocolQSA.Checked=1
 TestProtocolImageJ.TestProtocolQSA.Expanded=0
