--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -14,7 +14,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="122"/>
+      <BuildNr Value="123"/>
       <Attributes pvaPreRelease="True"/>
       <StringTable CompanyName="Yenzakahle Medical Physics Inc"/>
     </VersionInfo>
@@ -161,9 +161,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="148"/>
-        <CursorPos X="44" Y="180"/>
+        <TopLine Value="986"/>
+        <CursorPos X="9" Y="1015"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -646,7 +645,7 @@
         <ComponentName Value="AboutForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="4"/>
         <CursorPos X="35" Y="17"/>
         <UsageCount Value="200"/>
@@ -788,9 +787,10 @@
       <Unit88>
         <Filename Value="source/bstypes.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="64"/>
-        <CursorPos X="21" Y="241"/>
+        <TopLine Value="325"/>
+        <CursorPos Y="347"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -812,7 +812,7 @@
       <Unit90>
         <Filename Value="source/param2dfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="70"/>
         <CursorPos X="79" Y="81"/>
         <UsageCount Value="200"/>
@@ -834,7 +834,7 @@
       <Unit93>
         <Filename Value="source/mathsfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="14"/>
         <CursorPos X="36" Y="44"/>
         <ExtraEditorCount Value="1"/>
@@ -851,8 +851,8 @@
         <Filename Value="source/importunit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="213"/>
-        <CursorPos X="79" Y="536"/>
+        <TopLine Value="679"/>
+        <CursorPos Y="692"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -869,7 +869,7 @@
         <ComponentName Value="SettingsForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="154"/>
         <CursorPos X="46" Y="183"/>
         <ExtraEditorCount Value="1"/>
@@ -912,7 +912,7 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="181"/>
         <CursorPos X="32" Y="756"/>
         <ExtraEditorCount Value="2"/>
@@ -954,16 +954,17 @@
       </Unit102>
       <Unit103>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="786"/>
-        <CursorPos X="32" Y="797"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="1084"/>
+        <CursorPos X="22" Y="1091"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="15"/>
-          <CursorPos X="51" Y="41"/>
+          <TopLine Value="1085"/>
+          <CursorPos Y="1102"/>
         </ExtraEditor1>
         <UsageCount Value="15"/>
+        <Loaded Value="True"/>
       </Unit103>
       <Unit104>
         <Filename Value="../REPPs/reppsunit.pas"/>
@@ -988,10 +989,11 @@
       </Unit106>
       <Unit107>
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="6916"/>
         <CursorPos Y="6931"/>
-        <UsageCount Value="9"/>
+        <UsageCount Value="12"/>
+        <Loaded Value="True"/>
       </Unit107>
       <Unit108>
         <Filename Value="/usr/lib64/lazarus/lcl/include/winapi.inc"/>
@@ -1026,18 +1028,18 @@
       </Unit111>
       <Unit112>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmSpecRegress/uhillfit.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="29"/>
         <CursorPos X="28" Y="190"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="47"/>
         <Loaded Value="True"/>
       </Unit112>
       <Unit113>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmRegression/unlfit.pas"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="480"/>
         <CursorPos Y="510"/>
-        <UsageCount Value="43"/>
+        <UsageCount Value="45"/>
         <Loaded Value="True"/>
       </Unit113>
       <Unit114>
@@ -1066,119 +1068,127 @@
     <Build>
       <CleanOutputFileMask Value="*.ppu;*.ppl;*.o;*.or"/>
     </Build>
-    <JumpHistory Count="28" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="768" Column="43" TopLine="737"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="46" Column="10" TopLine="37"/>
       </Position1>
       <Position2>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="834" Column="10" TopLine="808"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="673" Column="10" TopLine="487"/>
       </Position2>
       <Position3>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="894" Column="16" TopLine="866"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="46" Column="10" TopLine="28"/>
       </Position3>
       <Position4>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="896" Column="11" TopLine="866"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="692" TopLine="670"/>
       </Position4>
       <Position5>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1010" Column="51" TopLine="981"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="692" TopLine="670"/>
       </Position5>
       <Position6>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1103" Column="16" TopLine="1073"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="693" TopLine="670"/>
       </Position6>
       <Position7>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1166" Column="16" TopLine="1136"/>
+        <Filename Value="source/importunit.pas"/>
+        <Caret Line="694" TopLine="670"/>
       </Position7>
       <Position8>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="8" Column="49"/>
+        <Caret Line="696" TopLine="670"/>
       </Position8>
       <Position9>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="51" Column="32" TopLine="21"/>
+        <Caret Line="697" TopLine="670"/>
       </Position9>
       <Position10>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="49" Column="21" TopLine="35"/>
+        <Caret Line="681" Column="34" TopLine="670"/>
       </Position10>
       <Position11>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="6" Column="38"/>
+        <Caret Line="697" Column="49" TopLine="686"/>
       </Position11>
       <Position12>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="545" Column="49" TopLine="516"/>
+        <Caret Line="692" TopLine="679"/>
       </Position12>
       <Position13>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="546" Column="49" TopLine="519"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position13>
       <Position14>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="548" Column="45" TopLine="519"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position14>
       <Position15>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1385" Column="60" TopLine="1373"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="351" Column="40" TopLine="328"/>
       </Position15>
       <Position16>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1092" TopLine="1069"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="144" Column="11" TopLine="126"/>
       </Position16>
       <Position17>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="607" TopLine="606"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position17>
       <Position18>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="687" TopLine="666"/>
+        <Caret Line="916" Column="60" TopLine="897"/>
       </Position18>
       <Position19>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="609" TopLine="588"/>
+        <Caret Line="994" Column="16" TopLine="985"/>
       </Position19>
       <Position20>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="689" TopLine="666"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position20>
       <Position21>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="608" Column="50" TopLine="590"/>
+        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
+        <Caret Line="6931" TopLine="6916"/>
       </Position21>
       <Position22>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="688" Column="44" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position22>
       <Position23>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1095" Column="48" TopLine="1077"/>
+        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
+        <Caret Line="6931" TopLine="6916"/>
       </Position23>
       <Position24>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1320" Column="63" TopLine="1316"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1091" Column="22" TopLine="1084"/>
       </Position24>
       <Position25>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="177" Column="67" TopLine="149"/>
+        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
+        <Caret Line="6931" TopLine="6916"/>
       </Position25>
       <Position26>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="179" Column="45" TopLine="162"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" Column="28" TopLine="325"/>
       </Position26>
       <Position27>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1105" TopLine="1100"/>
+        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
+        <Caret Line="6931" TopLine="6916"/>
       </Position27>
       <Position28>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1102" TopLine="1100"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position28>
+      <Position29>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="348" TopLine="325"/>
+      </Position29>
+      <Position30>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="349" TopLine="325"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -1214,16 +1224,10 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <Watches Count="3">
+    <Watches Count="1">
       <Item1>
-        <Expression Value="B"/>
+        <Expression Value="Dummy"/>
       </Item1>
-      <Item2>
-        <Expression Value="self.fRightDiff"/>
-      </Item2>
-      <Item3>
-        <Expression Value="fPeak"/>
-      </Item3>
     </Watches>
     <Exceptions Count="2">
       <Item1>
