fix brachy protocol tests

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -344,6 +344,6 @@ TestProtocolBistroMath.TestProtocolWFF.Expanded=0
 TestProtocolBistroMath.TestProtocolFFF.Checked=1
 TestProtocolBistroMath.TestProtocolFFF.Expanded=0
 TestProtocolImageJ.Checked=1
-TestProtocolImageJ.Expanded=0
-TestProtocolImageJ.TestProtocolQSA.Checked=1
-TestProtocolImageJ.TestProtocolQSA.Expanded=0
+TestProtocolImageJ.Expanded=1
+TestProtocolImageJ.TestProtocolBrachy.Checked=1
+TestProtocolImageJ.TestProtocolBrachy.Expanded=0
