--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -161,8 +161,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="986"/>
-        <CursorPos X="9" Y="1015"/>
+        <TopLine Value="477"/>
+        <CursorPos X="50" Y="498"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -645,7 +645,7 @@
         <ComponentName Value="AboutForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="4"/>
         <CursorPos X="35" Y="17"/>
         <UsageCount Value="200"/>
@@ -789,8 +789,8 @@
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="325"/>
-        <CursorPos Y="347"/>
+        <TopLine Value="115"/>
+        <CursorPos X="15" Y="119"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -812,7 +812,7 @@
       <Unit90>
         <Filename Value="source/param2dfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="70"/>
         <CursorPos X="79" Y="81"/>
         <UsageCount Value="200"/>
@@ -834,7 +834,7 @@
       <Unit93>
         <Filename Value="source/mathsfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="14"/>
         <CursorPos X="36" Y="44"/>
         <ExtraEditorCount Value="1"/>
@@ -869,7 +869,7 @@
         <ComponentName Value="SettingsForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="154"/>
         <CursorPos X="46" Y="183"/>
         <ExtraEditorCount Value="1"/>
@@ -912,9 +912,9 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <EditorIndex Value="7"/>
-        <TopLine Value="181"/>
-        <CursorPos X="32" Y="756"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="506"/>
+        <CursorPos Y="531"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -954,17 +954,16 @@
       </Unit102>
       <Unit103>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="1084"/>
-        <CursorPos X="22" Y="1091"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1085"/>
+        <CursorPos Y="1102"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="1085"/>
-          <CursorPos Y="1102"/>
+          <TopLine Value="1084"/>
+          <CursorPos X="22" Y="1091"/>
         </ExtraEditor1>
         <UsageCount Value="15"/>
-        <Loaded Value="True"/>
       </Unit103>
       <Unit104>
         <Filename Value="../REPPs/reppsunit.pas"/>
@@ -983,17 +982,16 @@
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/lnet/lazaruspackage/lclnet.pas"/>
         <UnitName Value="LCLNet"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="38"/>
-        <CursorPos X="94" Y="49"/>
-        <UsageCount Value="2"/>
+        <TopLine Value="51"/>
+        <CursorPos X="48" Y="78"/>
+        <UsageCount Value="10"/>
       </Unit106>
       <Unit107>
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="6916"/>
         <CursorPos Y="6931"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit107>
       <Unit108>
         <Filename Value="/usr/lib64/lazarus/lcl/include/winapi.inc"/>
@@ -1028,18 +1026,18 @@
       </Unit111>
       <Unit112>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmSpecRegress/uhillfit.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="29"/>
         <CursorPos X="28" Y="190"/>
-        <UsageCount Value="47"/>
+        <UsageCount Value="49"/>
         <Loaded Value="True"/>
       </Unit112>
       <Unit113>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmRegression/unlfit.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="480"/>
         <CursorPos Y="510"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="47"/>
         <Loaded Value="True"/>
       </Unit113>
       <Unit114>
@@ -1068,127 +1066,119 @@
     <Build>
       <CleanOutputFileMask Value="*.ppu;*.ppl;*.o;*.or"/>
     </Build>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="28" HistoryIndex="25">
       <Position1>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="46" Column="10" TopLine="37"/>
+        <Caret Line="46" Column="10" TopLine="28"/>
       </Position1>
       <Position2>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="673" Column="10" TopLine="487"/>
+        <Caret Line="692" TopLine="670"/>
       </Position2>
       <Position3>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="46" Column="10" TopLine="28"/>
+        <Caret Line="692" TopLine="670"/>
       </Position3>
       <Position4>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="670"/>
+        <Caret Line="693" TopLine="670"/>
       </Position4>
       <Position5>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="670"/>
+        <Caret Line="694" TopLine="670"/>
       </Position5>
       <Position6>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="693" TopLine="670"/>
+        <Caret Line="696" TopLine="670"/>
       </Position6>
       <Position7>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="694" TopLine="670"/>
+        <Caret Line="697" TopLine="670"/>
       </Position7>
       <Position8>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="696" TopLine="670"/>
+        <Caret Line="681" Column="34" TopLine="670"/>
       </Position8>
       <Position9>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="697" TopLine="670"/>
+        <Caret Line="697" Column="49" TopLine="686"/>
       </Position9>
       <Position10>
         <Filename Value="source/importunit.pas"/>
-        <Caret Line="681" Column="34" TopLine="670"/>
+        <Caret Line="692" TopLine="679"/>
       </Position10>
       <Position11>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="697" Column="49" TopLine="686"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position11>
       <Position12>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="679"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position12>
       <Position13>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
+        <Caret Line="351" Column="40" TopLine="328"/>
       </Position13>
       <Position14>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
+        <Caret Line="144" Column="11" TopLine="126"/>
       </Position14>
       <Position15>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="351" Column="40" TopLine="328"/>
+        <Caret Line="347" TopLine="330"/>
       </Position15>
       <Position16>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="144" Column="11" TopLine="126"/>
-      </Position16>
-      <Position17>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
-      </Position17>
-      <Position18>
         <Filename Value="source/bsunit.pas"/>
         <Caret Line="916" Column="60" TopLine="897"/>
-      </Position18>
-      <Position19>
+      </Position16>
+      <Position17>
         <Filename Value="source/bsunit.pas"/>
         <Caret Line="994" Column="16" TopLine="985"/>
+      </Position17>
+      <Position18>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
+      </Position18>
+      <Position19>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position19>
       <Position20>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Caret Line="347" Column="28" TopLine="325"/>
       </Position20>
       <Position21>
-        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <Caret Line="6931" TopLine="6916"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position21>
       <Position22>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Caret Line="348" TopLine="325"/>
       </Position22>
       <Position23>
-        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <Caret Line="6931" TopLine="6916"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="349" TopLine="325"/>
       </Position23>
       <Position24>
-        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
-        <Caret Line="1091" Column="22" TopLine="1084"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1015" Column="9" TopLine="986"/>
       </Position24>
       <Position25>
-        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <Caret Line="6931" TopLine="6916"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="536" Column="42" TopLine="512"/>
       </Position25>
       <Position26>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" Column="28" TopLine="325"/>
+        <Caret Line="1251" Column="42" TopLine="1238"/>
       </Position26>
       <Position27>
-        <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtwinapi.inc"/>
-        <Caret Line="6931" TopLine="6916"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="131" Column="15" TopLine="115"/>
       </Position27>
       <Position28>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Caret Line="35" Column="3" TopLine="16"/>
       </Position28>
-      <Position29>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="348" TopLine="325"/>
-      </Position29>
-      <Position30>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="349" TopLine="325"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
