implement dose point parameters

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -1,6 +1,6 @@
 [WindowState]
-Left=1142
-Top=177
+Left=1313
+Top=172
 Width=575
 Height=663
 
@@ -8,7 +8,7 @@ Height=663
 All Tests.Checked=1
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
-Test1DParamFuncs.Expanded=0
+Test1DParamFuncs.Expanded=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Checked=1
 Test1DParamFuncs.TestCaxVal1D_no_norm.Expanded=0
 Test1DParamFuncs.TestCaxVal1D_norm_cax.Checked=1
@@ -69,6 +69,22 @@ Test1DParamFuncs.TestFieldCentreDiff1D.Checked=1
 Test1DParamFuncs.TestFieldCentreDiff1D.Expanded=0
 Test1DParamFuncs.TestFieldSizeDiff1D.Checked=1
 Test1DParamFuncs.TestFieldSizeDiff1D.Expanded=0
+Test1DParamFuncs.TestDose20LeftDiff1D.Checked=1
+Test1DParamFuncs.TestDose20LeftDiff1D.Expanded=0
+Test1DParamFuncs.TestDose20RightDiff1D.Checked=1
+Test1DParamFuncs.TestDose20RightDiff1D.Expanded=0
+Test1DParamFuncs.TestDose50LeftDiff1D.Checked=1
+Test1DParamFuncs.TestDose50LeftDiff1D.Expanded=0
+Test1DParamFuncs.TestDose50RightDiff1D.Checked=1
+Test1DParamFuncs.TestDose50RightDiff1D.Expanded=0
+Test1DParamFuncs.TestDose60LeftDiff1D.Checked=1
+Test1DParamFuncs.TestDose60LeftDiff1D.Expanded=0
+Test1DParamFuncs.TestDose60RightDiff1D.Checked=1
+Test1DParamFuncs.TestDose60RightDiff1D.Expanded=0
+Test1DParamFuncs.TestDose80LeftDiff1D.Checked=1
+Test1DParamFuncs.TestDose80LeftDiff1D.Expanded=0
+Test1DParamFuncs.TestDose80RightDiff1D.Checked=1
+Test1DParamFuncs.TestDose80RightDiff1D.Expanded=0
 Test1DParamFuncs.TestFieldInflLeft1D.Checked=1
 Test1DParamFuncs.TestFieldInflLeft1D.Expanded=0
 Test1DParamFuncs.TestFieldInflRight1D.Checked=1
@@ -81,22 +97,22 @@ Test1DParamFuncs.TestPenumbraInflLeft1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflLeft1D.Expanded=0
 Test1DParamFuncs.TestPenumbraInflRight1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflRight1D.Expanded=0
-Test1DParamFuncs.TestDose20Left1D.Checked=1
-Test1DParamFuncs.TestDose20Left1D.Expanded=0
-Test1DParamFuncs.TestDose20Right1D.Checked=1
-Test1DParamFuncs.TestDose20Right1D.Expanded=0
-Test1DParamFuncs.TestDose50Left1D.Checked=1
-Test1DParamFuncs.TestDose50Left1D.Expanded=0
-Test1DParamFuncs.TestDose50Right1D.Checked=1
-Test1DParamFuncs.TestDose50Right1D.Expanded=0
-Test1DParamFuncs.TestDose60Left1D.Checked=1
-Test1DParamFuncs.TestDose60Left1D.Expanded=0
-Test1DParamFuncs.TestDose60Right1D.Checked=1
-Test1DParamFuncs.TestDose60Right1D.Expanded=0
-Test1DParamFuncs.TestDose80Left1D.Checked=1
-Test1DParamFuncs.TestDose80Left1D.Expanded=0
-Test1DParamFuncs.TestDose80Right1D.Checked=1
-Test1DParamFuncs.TestDose80Right1D.Expanded=0
+Test1DParamFuncs.TestDose20LeftInfl1D.Checked=1
+Test1DParamFuncs.TestDose20LeftInfl1D.Expanded=0
+Test1DParamFuncs.TestDose20RightInfl1D.Checked=1
+Test1DParamFuncs.TestDose20RightInfl1D.Expanded=0
+Test1DParamFuncs.TestDose50LeftInfl1D.Checked=1
+Test1DParamFuncs.TestDose50LeftInfl1D.Expanded=0
+Test1DParamFuncs.TestDose50RightInfl1D.Checked=1
+Test1DParamFuncs.TestDose50RightInfl1D.Expanded=0
+Test1DParamFuncs.TestDose60LeftInfl1D.Checked=1
+Test1DParamFuncs.TestDose60LeftInfl1D.Expanded=0
+Test1DParamFuncs.TestDose60RightInfl1D.Checked=1
+Test1DParamFuncs.TestDose60RightInfl1D.Expanded=0
+Test1DParamFuncs.TestDose80LeftInfl1D.Checked=1
+Test1DParamFuncs.TestDose80LeftInfl1D.Expanded=0
+Test1DParamFuncs.TestDose80RightInfl1D.Checked=1
+Test1DParamFuncs.TestDose80RightInfl1D.Expanded=0
 Test1DParamFuncs.TestFlatnessAve1D.Checked=1
 Test1DParamFuncs.TestFlatnessAve1D.Expanded=0
 Test1DParamFuncs.TestFlatnessDiff1D.Checked=1
@@ -167,10 +183,22 @@ TestSingleProfile.TestRightInfl.Checked=1
 TestSingleProfile.TestRightInfl.Expanded=0
 TestSingleProfile.TestPeakInfl.Checked=1
 TestSingleProfile.TestPeakInfl.Expanded=0
-TestSingleProfile.TestGetRelativePosValue_Left.Checked=1
-TestSingleProfile.TestGetRelativePosValue_Left.Expanded=0
-TestSingleProfile.TestGetRelativePosValue_Right.Checked=1
-TestSingleProfile.TestGetRelativePosValue_Right.Expanded=0
+TestSingleProfile.TestGetRelPosValue0_Left.Checked=1
+TestSingleProfile.TestGetRelPosValue0_Left.Expanded=0
+TestSingleProfile.TestGetRelPosValue0_Right.Checked=1
+TestSingleProfile.TestGetRelPosValue0_Right.Expanded=0
+TestSingleProfile.TestGetRelPosValueFWHM_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueFWHM_Left.Expanded=0
+TestSingleProfile.TestGetRelPosValueFWHM_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueFWHM_Right.Expanded=0
+TestSingleProfile.TestGetRelPosValueInfl_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueInfl_Left.Expanded=0
+TestSingleProfile.TestGetRelPosValueInfl_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueInfl_Right.Expanded=0
+TestSingleProfile.TestGetRelPosValueDiff_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueDiff_Left.Expanded=0
+TestSingleProfile.TestGetRelPosValueDiff_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueDiff_Right.Expanded=0
 TestSingleProfile.TestNormalise_none.Checked=1
 TestSingleProfile.TestNormalise_none.Expanded=0
 TestSingleProfile.TestNormalise_cax.Checked=1
@@ -286,13 +314,13 @@ Test2DParamFuncs.TestXSize2D.Expanded=0
 Test2DParamFuncs.TestYSize2D.Checked=1
 Test2DParamFuncs.TestYSize2D.Expanded=0
 TestProtocolSNC.Checked=1
-TestProtocolSNC.Expanded=0
+TestProtocolSNC.Expanded=1
 TestProtocolSNC.TestProtocolAll.Checked=1
 TestProtocolSNC.TestProtocolAll.Expanded=0
 TestProtocolSNC.TestProtocolVarian.Checked=1
 TestProtocolSNC.TestProtocolVarian.Expanded=0
 TestProtocolPTW.Checked=1
-TestProtocolPTW.Expanded=0
+TestProtocolPTW.Expanded=1
 TestProtocolPTW.TestProtocolVarian.Checked=1
 TestProtocolPTW.TestProtocolVarian.Expanded=0
 TestProtocolPTW.TestProtocolSiemens.Checked=1
@@ -306,7 +334,7 @@ TestProtocolPTW.TestProtocolIEC.Expanded=0
 TestProtocolPTW.TestProtocolWFF.Checked=1
 TestProtocolPTW.TestProtocolWFF.Expanded=0
 TestProtocolIBA.Checked=1
-TestProtocolIBA.Expanded=0
+TestProtocolIBA.Expanded=1
 TestProtocolIBA.TestProtocolVarian.Checked=1
 TestProtocolIBA.TestProtocolVarian.Expanded=0
 TestProtocolIBA.TestProtocolSiemens.Checked=1
@@ -324,7 +352,7 @@ TestProtocolIBA.TestProtocolWFF.Expanded=0
 TestProtocolIBA.TestProtocolFFF.Checked=1
 TestProtocolIBA.TestProtocolFFF.Expanded=0
 TestProtocolPylinac.Checked=1
-TestProtocolPylinac.Expanded=0
+TestProtocolPylinac.Expanded=1
 TestProtocolPylinac.TestProtocolVarian.Checked=1
 TestProtocolPylinac.TestProtocolVarian.Expanded=0
 TestProtocolPylinac.TestProtocolSiemens.Checked=1
@@ -344,6 +372,6 @@ TestProtocolBistroMath.TestProtocolWFF.Expanded=0
 TestProtocolBistroMath.TestProtocolFFF.Checked=1
 TestProtocolBistroMath.TestProtocolFFF.Expanded=0
 TestProtocolImageJ.Checked=1
-TestProtocolImageJ.Expanded=1
+TestProtocolImageJ.Expanded=0
 TestProtocolImageJ.TestProtocolBrachy.Checked=1
 TestProtocolImageJ.TestProtocolBrachy.Expanded=0
