add Top parameter

--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -97,6 +97,8 @@ Test1DParamFuncs.TestPenumbraInflLeft1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflLeft1D.Expanded=0
 Test1DParamFuncs.TestPenumbraInflRight1D.Checked=1
 Test1DParamFuncs.TestPenumbraInflRight1D.Expanded=0
+Test1DParamFuncs.TestTopInfl1D.Checked=1
+Test1DParamFuncs.TestTopInfl1D.Expanded=0
 Test1DParamFuncs.TestDose20LeftInfl1D.Checked=1
 Test1DParamFuncs.TestDose20LeftInfl1D.Expanded=0
 Test1DParamFuncs.TestDose20RightInfl1D.Checked=1
@@ -142,7 +144,7 @@ Test1DParamFuncs.TestDeviationCAX1D.Expanded=0
 Test1DParamFuncs.TestNoFunc1D.Checked=1
 Test1DParamFuncs.TestNoFunc1D.Expanded=0
 TestSingleProfile.Checked=1
-TestSingleProfile.Expanded=0
+TestSingleProfile.Expanded=1
 TestSingleProfile.TestGetCentre_odd.Checked=1
 TestSingleProfile.TestGetCentre_odd.Expanded=0
 TestSingleProfile.TestGetCentre_even.Checked=1
@@ -205,6 +207,8 @@ TestSingleProfile.TestNormalise_cax.Checked=1
 TestSingleProfile.TestNormalise_cax.Expanded=0
 TestSingleProfile.TestNormalise_max.Checked=1
 TestSingleProfile.TestNormalise_max.Expanded=0
+TestSingleProfile.TestTop.Checked=1
+TestSingleProfile.TestTop.Expanded=0
 TestBeam.Checked=1
 TestBeam.Expanded=0
 TestBeam.TestCentre_RowOddCollOdd.Checked=1
