--- a/UnitTests/TestBeamScheme.lpi
+++ b/UnitTests/TestBeamScheme.lpi
@@ -115,6 +115,10 @@
       <VerifyObjMethodCallValidity Value="True"/>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
+        <TrashVariables Value="True"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
