--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,14 +3,13 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
-version: 2
+version: 1.02
 
 # Set the OS, Python version and other tools you might need
 build:
-  os: Fedora 40
+  os: ubuntu-22.04
   tools:
-    Free pascal: "3.2.2"
-    Lazarus: "3.4"
+    python: "3.12"
     # You can also specify other tool versions:
     # nodejs: "19"
     # rust: "1.64"
